--- a/style.css
+++ b/style.css
@@ -4,21 +4,27 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-heading {
   font-family: sans-serif;
+  font-size: 3rem;
   text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .game {
-  height: 60%;
+  height: 100%;
   display: flex;
+  flex-grow: 1;
 }
 .game__word {
-  width: 40%;
-  font-family: sans-serif;
+  width: 60%;
+  font-family: "Reddit Mono";
   font-size: 3rem;
   display: flex;
   flex-direction: column;
@@ -26,9 +32,10 @@ body {
   justify-content: space-evenly;
 }
 .game__picture {
-  width: 60%;
+  width: 40%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .hangman {
@@ -130,21 +137,28 @@ body {
 }
 
 .input {
-  height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   flex-grow: 1;
+  position: fixed;
+  bottom: 1rem;
+  width: 100%;
+  gap: 1rem;
+  cursor: pointer;
 }
 .input .correct {
   background-color: rgb(89, 181, 89);
+  cursor: pointer;
 }
 .input .incorrect {
   background-color: rgb(218, 63, 63);
+  cursor: pointer;
 }
 .input .default {
   background-color: rgb(166, 164, 164);
+  cursor: pointer;
 }
 .input__row-1 {
   width: 100%;
@@ -160,8 +174,9 @@ body {
   gap: 1rem;
 }
 .input__row-3 {
-  width: 70%;
+  width: 65%;
   display: flex;
+  justify-items: stretch;
   flex-direction: row;
   gap: 1rem;
 }
@@ -175,6 +190,48 @@ body {
   justify-content: center;
   flex-grow: 1;
   flex-basis: 100%;
+}
+
+.bonus-buttons {
+  align-self: center;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 3rem;
+}
+.bonus-buttons__new {
+  font-family: "Reddit Mono";
+  font-size: 2.5rem;
+}
+.bonus-buttons__previous {
+  font-family: "Reddit Mono";
+  font-size: 2.5rem;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.84);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  color: white;
+  font-family: sans-serif;
+  padding: 4rem;
+}
+
+.invisible {
+  display: none;
+}
+
+.visible {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
