--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ body {
   left: 22px;
 }
 .hangman_column {
-  height: 325px;
-  border: 3px solid black;
   position: absolute;
+  border: 3px solid black;
+  height: 325px;
   top: 72px;
   left: 97px;
 }
@@ -146,7 +146,6 @@ body {
   bottom: 1rem;
   width: 100%;
   gap: 1rem;
-  cursor: pointer;
 }
 .input .correct {
   background-color: rgb(89, 181, 89);
@@ -218,12 +217,18 @@ body {
   top: 0;
   background-color: rgba(0, 0, 0, 0.84);
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: 3rem;
+  gap: 5rem;
   color: white;
   font-family: sans-serif;
   padding: 4rem;
+}
+.overlay__heading {
+  font-size: 4rem;
+}
+.overlay__words {
+  font-size: 3rem;
 }
 
 .invisible {
@@ -231,7 +236,7 @@ body {
 }
 
 .visible {
-  display: block;
+  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
