--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,6 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  //   justify-content: space-between;
 }
 .main-heading {
   font-family: sans-serif;
@@ -19,19 +18,14 @@ body {
   height: 100%;
   display: flex;
   flex-grow: 1;
-  //   justify-content: stretch;
-  //   align-items: center;
   &__word {
     width: 60%;
     font-family: 'Reddit Mono';
     font-size: 3rem;
-    // text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    // justify-self: center;
-    // align-self: center;
   }
   &__picture {
     width: 40%;
@@ -62,9 +56,9 @@ body {
     left: 22px;
   }
   &_column {
-    height: 325px;
-    border: 3px solid black;
     position: absolute;
+    border: 3px solid black;
+    height: 325px;
     top: 72px;
     left: 97px;
   }
@@ -142,7 +136,6 @@ body {
   }
 }
 .input {
-  //   height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -152,7 +145,6 @@ body {
   bottom: 1rem;
   width: 100%;
   gap: 1rem;
-  cursor: pointer;
   & .correct {
     background-color: rgb(89, 181, 89);
     cursor: pointer;
@@ -172,14 +164,12 @@ body {
     flex-direction: row;
     gap: 1rem;
     justify-content: stretch;
-    // justify-content: space-between;
   }
   &__row-2 {
     width: 80%;
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    // justify-content: space-between;
   }
   &__row-3 {
     width: 65%;
@@ -187,15 +177,12 @@ body {
     justify-items: stretch;
     flex-direction: row;
     gap: 1rem;
-    // justify-content: space-between;
   }
 }
 .keyboard__button {
   font-family: 'Reddit Mono';
   font-size: 2.5rem;
   flex-basis: 250px;
-  //   margin: auto;
-  //   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -209,14 +196,10 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  //   align-items: center;
-  //   margin-top: auto;
-  //   margin-bottom: auto;
   padding-top: 3rem;
   &__new {
     font-family: 'Reddit Mono';
     font-size: 2.5rem;
-    // display: none;
   }
   &__previous {
     font-family: 'Reddit Mono';
@@ -233,16 +216,24 @@ body {
   top: 0;
   background-color: rgba(0, 0, 0, 0.84);
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: 3rem;
+  gap: 5rem;
+  //   justify-content: space-between;
+
   color: white;
   font-family: sans-serif;
   padding: 4rem;
+  &__heading {
+    font-size: 4rem;
+  }
+  &__words {
+    font-size: 3rem;
+  }
 }
 .invisible {
   display: none;
 }
 .visible {
-  display: block;
+  display: flex;
 }
